wp-content/themes/sixgill/less/mobile_portrait_landscape_solutions.less
/* Solutions mobile portrait and landscape styles */

.solutions {

	&-learn-more-link {
		display: none;
	}

	&-top-title-spacing {
		margin-bottom: 11px;
	}

	&-icon {
		&-item {
			padding: 25px 0;
		}

		&-caption {
			font-size: 18.6px;
			font-weight: 700;
			letter-spacing: 0.6px;
			max-width: inherit;
			font-weight: bold;
			padding: 0 20vw;
		}

		&-link {
			margin-top: 16px;

			& a {
				font-size: 16px;
				font-weight: 700;
				line-height: 0.47;
				letter-spacing: 0.5px;
			}
		}
	}	

	&-first-section {
		background-image: url('images/solutions/featBg-mobile@1x.png');
		
		&-block {
			width: 100%;
			align-items: center;
			background: none;
			text-align: center;
			z-index: 2;

			&-title {
				font-size: 29px;
				font-weight: 300;
				font-family: "Lato";
				letter-spacing: 1.5px;
				line-height: 1em;
				margin-bottom: 27px;
				text-transform: uppercase;
			}

			&-text {
				width: 88.6%;
				margin-bottom: 42px;
				text-align: left;
			}

			&-paragraph {
				&, & p, & li{
					font-size: 16px;
					font-weight: 400;
				}

				& p {
					margin-bottom: 0px;
				}
			}

		}

		&-image-wrapper {
			display: none;

			&-mobile {
				width: 100%;
				display: block;
				height: auto;
			}
		}

		&-image {
			width: 100%;
		}

	}

	&-second-section {
		display: block;
		height: inherit;

		&-image-wrapper {
			display: none;
		}

		&-block-title {
			font-size: 26.3px;
			font-weight: 300;
			line-height: 1.2;
			letter-spacing: 2.9px;
			text-align: left;
			padding-top: 30px;
			margin-bottom: 25px;
		}

		&-block {
			padding-top: 0px;
		}

		&-block-text {
		    display: inline-block;
		    padding: 16px;
		    width: 100%;
		}

		&-icons-block {
			margin: 0 auto;
		}

		&-icons-title::after, &-icons-title::before {
			display: none;
		}

		&-icons-title {
			font-size: 15.9px;
			font-weight: 700;
			line-height: 2.83;
			letter-spacing: 0.5px;
			text-align: center;
			margin-bottom: 0px;
		}
	}

	&-third-section {
		display: block;
		height: auto;

		&-image-wrapper {
			display: none;
		}

		&-block {
			&-title {
				font-size: 26.3px;
				font-weight: 300;
				line-height: 1.67;
				letter-spacing: 2.9px;
				max-width: 80vw;
			}

			&-paragraph p {
				font-size: 15.9px;
				font-weight: 500;
				line-height: 1.33;
				letter-spacing: 0.5px;
			}

			&-text {
				display: inline-block;
			    padding: 16px;
			    width: 100%;
			}
		}

		&-icons-title::after, &-icons-title::before {
			display: none;
		}
	}

	&-use-cases {
		
		&-block {
			&-subtitle {
				min-height: 135px;
				padding: 25px;
			}

			&-subtitle > p {
				font-size: 19px;
				line-height: 20px !important;
				width: 56%;
			}

			&-subtitle > a {
				font-size: 19px;
				padding: 15px 0 0;
			}
		}
	}

	&-fourth-section {
		display: block;
		height: inherit;
		margin-bottom: -30px;
	}
}

.solution {
	&-subpage-carousels-div {
		width: 72.73vw;
		margin: 10vw 0px 10vw 0px;
	}

	&-subpage-galleries-wrapper {
		padding: 10vw 0px 9vw 0px;
	}

	&-carousel {
		&-button-image {
			height: 5.625vw;
		}

		&-mobile-button {
			width: 50%;
			height: 9.53vw;
			background-color: #2e2e2e;
			cursor: pointer;
			display: inline-block;

			&-icon {
				display: inline-block;
			}
		}
	}

	&-use-cases {
		&-block-image {
			height: 53vw;
		}

		&-block-subtitle {
			padding: 20px;
		}

		&-block-subtitle > p {
			width:100%;
		}

		&-block-content{
			text-align: center;
		}
	}

	&-subpage {
		&-first-block-image-container {
			width: 100%;
			height: auto;
		}

		&-section-title {
			margin-bottom: 23px;
		}

		&-section-title, &-second-block-title {
			font-size: 44.6px;
			font-weight: 300;
			letter-spacing: 1.3px;
			line-height: 1.2em;
		}

		&-second-block {
			&-wrapper {
				text-align: left;
			}

			&-image-container {
				position: relative;
			}
		}

		&-third-block {
			height: inherit;
		}



		&-bottom {
			&-block {
				margin-top: 50px;

				&-title{
					font-size: 27px;
					font-weight: 300;
					line-height: 1.67;
					letter-spacing: 2.9px;
					text-align: left;
				}

				&-wrapper {
					margin-bottom: 32px;
					background: url('/wp-content/themes/sixgill/images/solutions/getstarted_bg_mobile.png') no-repeat scroll 0 0 / cover ;
				}				
			}

			&-section {
				&-subtitle {
					text-align: left;
					margin-bottom: 30px;
					width: inherit;
					font-size: 16.2px;
					font-weight: normal;
					line-height: 1.25;
					letter-spacing: 0.5px;
				}

				&-content {
					width: 83.28vw;

					& p {
						text-align: left;
					}
				}

				&-column ul li {
					font-size: 16.2px;
					font-weight: normal;
					line-height: 1.25;
					letter-spacing: 0.5px;
				}

				&-text-wrapper {
					& p {
						font-size: 16.2px;
						font-weight: normal;
						line-height: 1.25;
						letter-spacing: 0.5px;
					}
				}

			}

			&-line {
				margin-top: 50px;
				margin-bottom: 50px;
			}
		}

		&-suptitle {
			font-size: 13.2px;
			font-weight: 500;
			letter-spacing: 0.4px;
		}

		&-title {
			font-size: 18px;
			font-weight: 300;
			font-family: "Lato";
			letter-spacing: 0.5px;
		}

		&-container {
			margin-left: 30px;
			margin-right: 30px;
			padding-left: 0px;
			padding-right: 0px;
		}

		&-section-title {
			font-size: 28px;
			font-weight: 300;
			font-family: "Lato";
			letter-spacing: 0.9px;
		}

		&-second-block {
			padding-top: 6.4vw;

			&-wrapper {
				width: 88.28vw;
			}
		}

		&-gallery {
			&-thumbnail-wrapper {
				width: 92.44vw;
				margin-bottom: 4vw;
			}

			&-button {
				display: none !important;

				&-link:not(:last-child) & {
					margin-bottom: 2.5vw;
				}

				&-icon {
					margin-right: 3.13vw;
				}
			}

			&-block-title {
				font-size: 13.5px;
				font-weight: bold;
				line-height: 1.5;
				letter-spacing: 0.7px;
				margin-bottom: 6vw;
			}
		}

		&-slide {
			&-info {
				text-align: left;
				width: 87.5vw;
				padding: 0 3.125vw 0 3.125vw;
			}

			&-title {
			  font-size: 5.625vw;
			  font-weight: 500;
				margin-bottom: 1vw;
				font-weight: 500;
			}

			&-description {
			  font-size: 4vw;
				margin-bottom: 7.66vw;
				font-weight: normal;
			}
		}

		&-first-block-text p {
			font-size: 16.2px;
			font-weight: normal;
			letter-spacing: 0.5px;
		}

		&-second-block-wrapper p{
			font-size: 16.2px;
			font-weight: normal;
			line-height: 1.42;
			letter-spacing: 0.5px;
		}
	}
}

.my_containerSolution {
	padding-top: 19px;
	margin-top: 0px;
}

.thumbnail-solutions-mobile {
	width: 100%;
	text-align: center;
}

ul:not([class]) li {
	margin-bottom: 1em;
}

[id$="carousel-mobile-button-left"] {
	border-right: 1px solid rgba(153, 153, 153, 0.32);
	padding-left: 3.125vw;
	text-align: left;
}

[id$="carousel-mobile-button-right"] {
	text-align: right;
	padding-right: 3.125vw;
}

.own {
	&-carousel {
		&-outside-wrapper {
			width: 100%;
		}

		&-n-controls-wrapper {
			width: 93.75%;
			display: inline-block;
		}
	}

	&-wrapper-outer {
		display: inline-block;
	}
}

#content {
	& .solution-subpage-first-block-text p {
		line-height: 1.25;
	}
	
	& .solution-subpage-second-block-wrapper p {
		line-height: 1.42;
	}

	& .solution-subpage-bottom-section-text-wrapper p {
		line-height: 1.25;
	}
}

